"fixed" flat button styles when it shouldn't have been broken in the first place :Y

--- a/src/renderer/common/components/Button/flat.scss
+++ b/src/renderer/common/components/Button/flat.scss
@@ -1,11 +1,16 @@
-@import './index';
+// @import './default';
 
 .FlatButton {
-  @extend .Button;
-
   border: none;
   padding: 0;
   margin-right: var(--padding-default);
+
+  cursor: pointer;
+
+  font-weight: 600;
+  text-transform: uppercase;
+
+  transition: var(--transition-default);
 
   &:hover {
     background-color: transparent;
